# GUFG

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README  README.md  Readme.md  SConstruct  SDL_COPYING  action.cc  action.h  aerial.cc  aerial.h  aux.cc  auxil.cc  auxil.h  bmp.cc  buildchar.cc  character.cc  character.h  charlist.h  compat.h  draw.cc  dumpboxes.sh  game.py  grey.cc  grey.h  harness.cc  harness.h  hitstun.cc  instance.py  interface.cc  interface.h  interface.py  keytest.cc  looping.cc  looping.h  makefile  (+29 more)
CMakeModules/: FindGLEW.cmake  FindOggVorbis.cmake
Grey/: A.mv  BA.mv  BH.mv  BL.mv  BackTech.mv  ForwardTech.mv  Grey.ch  HL.mv  HS.mv  JF.mv  JN.mv  JQ.mv  NC.mv  NJ.mv  NS.mv  NeutralTech.mv  SJF.mv  SJN.mv  StopTech.mv  dead.mv  die.mv  down.mv  fA.mv  jqsh.mv  jwsh.mv  wsh.mv
Misc/: SP.xcf  Select.xcf  Thumbs.db
Misc/shaders/: grey.frag
Orange/: 22D.mv  22E.mv  2E.mv  A.mv  BA.mv  BH.mv  BL.mv  Fall.mv  ForwardTech.mv  HL.mv  HS.mv  J0.mv  JF.mv  JN.mv  JQ.mv  NC.mv  NJ.mv  NL.mv  NS.mv  NeutralTech.mv  Orange.ch  SJF.mv  SJN.mv  SJQ.mv  W.mv  WQ.mv  break.mv  down.mv  f2E.mv  fA.mv  jJF.mv  jJN.mv  jJQ.mv  jqsh.mv  jwsh.mv  qsh.mv  slide.mv  wsh.mv
Orange/beam/: 236D.mv  2E.ch  2E.mv  A.ch  A.mv  Dstop2e.ch  Dstop2e.mv  Dstopa.ch  Dstopa.mv  Elaunch2e.mv  Elauncha.mv  NS.mv  beam.ch  die.mv
Red/: -D.mv  2.mv  214A.mv  214B.mv  214E.mv  214aE.mv  236A.mv  236B.mv  236C.mv  236D.mv  2A.mv  2B.mv  2C.mv  2D.mv  2E.mv  623E.mv  63214C.mv  63214D.mv  =214B.mv  =214b.mv  A.mv  B.mv  BA.mv  BH.mv  BL.mv  BackTech.mv  C.mv  Cthrow.mv  D.mv  DA.mv  DAcancel.mv  DB.mv  DBcancel.mv  DE.mv  DEcancel.mv  Dcancel.mv  E.mv  Fall.mv  ForwardTech.mv  HL.mv  (+53 more)
White/: A.mv  B.mv  BA.mv  BH.mv  BL.mv  D.mv  Fall.mv  H.mv  HL.mv  HS.mv  JF.mv  JN.mv  JQ.mv  NL.mv  NS.mv  UT.mv  W.mv  WB.mv  break.mv
Yellow/: 2.mv  214A.mv  214E.mv  22D.mv  236B.mv  236B214B.mv  236B236B.mv  236Br.mv  236D.mv  2A.mv  2B.mv  2C.mv  2D.mv  2E.mv  A.mv  ADcounter.mv  ADroll.mv  B.mv  BA.mv  BL.mv  BackTech.mv  C.mv  Cthrow.mv  D.mv  Dback.mv  Ddown.mv  Dforward.mv  Dup.mv  Dupb.mv  Dupf.mv  E.mv  Fall.mv  ForwardTech.mv  HL.mv  J0.mv  JF.mv  JN.mv  JQ.mv  NA.mv  NC.mv  (+49 more)
c++/: charlist.i  game.cc
c++/characters/: yellow.h
c++/engine/: auxil.cc  character.cc  draw.cc  hitstun.cc  player.cc
content/characters/Red/: 214A.mv  214B.mv  214C.mv  236D.mv  2A.mv  2B.mv  2C.mv  2D.mv  2E.mv  A.mv  B.mv  BA.mv  BH.mv  BL.mv  BackTech.mv  C.mv  DAcancel.mv  E.mv  Fall.mv  ForwardTech.mv  HL.mv  JN.mv  JQ.mv  NL.mv  Red.ch  SJN.mv  StopTech.mv  baCkthrow.mv  dash.mv  die.mv  down.mv  j214C.mv  j236D.mv  jA.mv  jD.mv  jDLR.mv  jE.mv  jJQ.mv  jbaCkthrow.mv  qsh.mv  (+1 more)
content/characters/White/: B.mv  BA.mv  BH.mv  BL.mv  D.mv  HL.mv  J1.mv  JF.mv  JN.mv  JQ.mv  NJ.mv  NL.mv  NS.mv  SJN.mv  SJQ.mv  StopTech.mv  UT.mv  W.mv  WQ.mv  White.ch  break.mv  dashloop.mv  dead.mv  die.mv  jJF.mv  jJN.mv  jqsh.mv  jwsh.mv  qsh.mv  slide.mv
content/characters/Yellow/: 214E.mv  236B214B.mv  2A.mv  2B.mv  2E.mv  A.mv  B.mv  BA.mv  BackTech.mv  Cthrow.mv  D.mv  Dback.mv  Dforward.mv  E.mv  ForwardTech.mv  JQ.mv  NJ.mv  NL.mv  NS.mv  NeutralTech.mv  SJF.mv  SJQ.mv  StopTech.mv  W.mv  WQ.mv  Yellow.ch  airbackthrowlanding.mv  baCkthrow.mv  flashending.mv  j236C.mv  jA.mv  jDback.mv  jJN.mv  jJQ.mv  jbaCkthrow.mv  qC.mv  qD.mv  qblr.mv  wB.mv  wC.mv
content/characters/template/: BH.mv  BL.mv  BackTech.mv  ForwardTech.mv  HL.mv  HS.mv  J0.mv  JF.mv  NL.mv  NeutralTech.mv  SJF.mv  UT.mv  W.mv  WQ.mv  backthrow.mv  break.mv  dash.mv  down.mv  jJQ.mv  jN.mv  jfall.mv  jqsh.mv  jwsh.mv  qsh.mv  template.ch  throw.mv
doc/: libcxx-fedora.md
info/: License.md  README.md  Readme.md
python/: instance.py
resources/characters/: README
resources/characters/Red/: 214A.mv  214B.mv  214C.mv  236D.mv  2A.mv  2B.mv  2C.mv  2E.mv  623E.mv  63214B.mv  63214C.mv  A.mv  B.mv  BA.mv  BL.mv  BackTech.mv  Cthrow.mv  D.mv  DAcancel.mv  DB.mv  DBcancel.mv  E.mv  Fall.mv  ForwardTech.mv  HS.mv  J0.mv  JF.mv  JN.mv  JQ.mv  NJ.mv  NS.mv  NeutralTech.mv  Red.ch  SJF.mv  SJN.mv  SJQ.mv  StopTech.mv  UT.mv  baCkthrow.mv  break.mv  (+24 more)
resources/characters/White/: A.mv  BH.mv  BL.mv  D.mv  Fall.mv  JF.mv  JN.mv  JQ.mv  NL.mv  NS.mv  break.mv
resources/characters/Yellow/: 214D.mv  22D.mv  236B.mv  236B214B.mv  236B236B.mv  236Br.mv  236D.mv  236E.mv  2A.mv  2C.mv  2D.mv  2E.mv  4E.mv  4EF.mv  6E.mv  A.mv  ADcounter.mv  ADroll.mv  B.mv  BA.mv  BH.mv  BL.mv  BackTech.mv  C.mv  Cthrow.mv  D.mv  Dback.mv  Dforward.mv  Dupb.mv  Dupf.mv  ForwardTech.mv  HL.mv  HS.mv  J0.mv  JF.mv  JN.mv  JQ.mv  NC.mv  NL.mv  SJF.mv  (+43 more)
scripts/: TAM.sh  cleanup-tree.sh  double.sh  dumpboxes.sh  flip.sh
src/: SConscript  SConscript.orig  SConscript.py  action.cc  action.h  auxil.cc  auxil.h  bmp.cc  charlist.h  compat.h  game.cc  gufg  pkbtl.cc  rand.cc  replay.cc  window.cc
src/c++/: game.cc  replay.cc
src/c++/characters/: red.cc  red.h  yellow.cc  yellow.h
src/c++/engine/: action.cc  action.h  analytics.cc  analytics.h  auxil.cc  auxil.h  character.cc  character.h  controller.cc  controller.h  daemon.cc  draw.cc  gameinstance.cc  gameinstance.h  harness.cc  harness.h  hitstun.cc  interface.cc  interface.h  modelview.cc  player.cc  player.h  projectile.cc  session.cc  session.h  thing.cc  (+7 more)
src/characters/: grey.cc  grey.h  red.cc  red.h  yellow.cc  yellow.h
src/engine/: action.cc  action.h  aerial.cc  analytics.cc  analytics.h  analytics.h.orig  auxil.cc  auxil.h  character.cc  character.h  cockfight.cc  cockfight.h  controller.cc  controller.h  daemon.cc  draw.cc  engine.i  gl-compat.h  harness.cc  harness.h  hitstun.cc  interface.cc  interface.cc.orig  interface.h  interface.i  masks.h  organism.h  player.cc  player.h  projectile.cc  sdl-compat.h  session.cc  session.h  shaderman.cc  special.cc  thing.cc  thing.h  tokenizer.cc  tokenizer.h  trainer.h  (+5 more)
src/python/: api.pxd  api.pyx  engine.c  engine.pyx  fighter.py  menus.py  screen.py
src/scripts/: double.sh  dumpboxes.sh  fillFrameNumbers.sh  gufg.py  libcxx-fedora.sh
(+1 files in other folders)
